@@ -1563,9 +1563,15 @@
     </tr>
 
     <tr>
-      <td>Save continuous PNG snapshots</td>
+      <td>Save continuous PNG snapshots (per interval)</td>
       <td>Alt + s</td>
       <td>Cmd + s</td>
+    </tr>
+
+    <tr>
+      <td>Save continuous PNG snapshots (every frame)</td>
+      <td>Shift-Alt + s</td>
+      <td>Shift-Cmd + s</td>
     </tr>
   </table>
 
